ATLAS-5185: [REACT UI] Fix logout localStorage key mismatch and add Apache Atlas logo in header when sidebar is collapsed

--- a/dashboard/src/styles/header.scss
+++ b/dashboard/src/styles/header.scss
@@ -19,6 +19,7 @@
 
 .header-logo {
   width: 180px;
+  padding-left: 12px;
 }
 
 .header-menu {
